--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" routerLink="">Fund This</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a routerLink="project">Projects</a></li>
+      <li><a routerLink="projects">Projects</a></li>
     </ul>
   </div>
 </nav>
