--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -3,5 +3,9 @@
   <div *ngFor="let project of projects | async" (click)="goToDetailPage(project)" class ="panel panel-default">
     <div class="panel-body">
       <h3><em>{{project.name}}</em> $ {{project.totalGoal}}</h3>
+      <div *ngIf="currentRoute === '/admin'">
+        <h4>{{ project.description }}</h4>
+        <hr>
+        <app-edit-project [selectedProject]="project"> </app-edit-project>
     </div>
   </div>
